test/tests/errors/error-file-get-wrong-arg-count.sm
// true
// false
// false
/**/
/**/

program{
    file f withbuffer bf: int;
    get(f, bf);
}